builder.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubectl
spec:
  containers:
  - name: kubectl
    image: joshendriks/alpine-k8s
    command:
    - /bin/cat
    tty: true
