ingress-jenkins.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-server
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
